--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -231,7 +231,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Polytechnic of Bari</h4>
-	   					<p>Computer and automation engineering.</p>
+	   					<p>Computer engineering - Information systems curriculum</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -249,7 +249,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Polytechnic of Bari</h4>
-	   					<p>Computer engineering - Information systems curriculum</p>
+	   					<p>Computer and automation engineering</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -273,6 +273,24 @@
 
    			<div class="timeline-wrap">
 
+				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Software Development Engineer</h3>
+	   					<p>March 2019 - Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Vector GB Ltd.</h4>
+	   					<p>Supporting the team by developing Python and Web software for testing environment and Automotive sector.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -281,7 +299,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>International Consultant</h3>
-	   					<p>August 2018 - Present</p>
+	   					<p>August 2018 - February 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -564,9 +582,9 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            Space Camp - Akka Technologies<br>
-            Cannes, Provence - Alpes-Côte d’Azur<br>
-            06150, FR
+            Vector GB Ltd. - 8 Duncannon St<br>
+            Charing Cross, London<br>
+            WC2N 4JF, UK
             </p>
 
    		</div>
@@ -592,8 +610,9 @@
 
    			<h5>Call me at</h5>
 
-   			<p>Mobile: (+39) 3290965264
-			   </p>
+   			<p>Mobile: (+39) 3290965264<br>
+			(+44) 07746199258
+			</p>
 
    		</div>
    		
