SZ: Heroku version

--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -119,7 +119,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Computer engineer postgraduated at Polytechnic of Bari in 2018. I have a particular passion in programming and solving problems in general. Also, I have a propensity in liking to design software architectures and implement them by my own. Also, I enjoy learning new languages and technologies that I still don’t know.
+   			<p>Computer engineer postgraduated at Polytechnic of Bari in 2018. I have a particular passion in programming and solving problems in general. I like to design software architectures and implement them by myself. Also, I enjoy learning new languages and technologies that I still don’t know.
             Very keen on music, cinema and astronomy.</p>
 
    			<ul class="info-list">
@@ -148,7 +148,7 @@
 
    			<h3>Skills</h3>
    			<p>My favourite programming language is Python. Also, I have experience with Java, Matlab and PHP.
-            I have experience with both SQL and NoSQL databases and I'm a bit of Amazon Web Services.
+            I have experience with both SQL and NoSQL databases.
             </p>
 
 				<ul class="skill-bars">
@@ -518,12 +518,11 @@
    		</div> 
    	</div> <!-- /section-intro -->
 
-
+	<!--
     <div class="row contact-form" id="form_container">
 
    		<div class="col-twelve">
 
-            <!-- form -->
             <form method="post" id="form" action=""  >
                 {% csrf_token %}
       			<fieldset>
@@ -553,11 +552,11 @@
                   </div>
 
       			</fieldset>
-      		</form> <!-- Form End -->
 
-         </div> <!-- /col-twelve -->
+         </div>
 
-   	</div> <!-- /contact-form -->
+   	</div>
+   	-->
 
     <!-- contact-success -->
     <div id="success_form" style="text-align: center; visibility: hidden">
