--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -133,7 +133,7 @@
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>International consultant</span>
+   					<span>Software Development Engineer</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
